[package]
name = "minilinux"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2", features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
js-sys = "0.3"
serde_json = "1.0"


[features]
# Define a feature chamada `threads`
threads = []

# Torna a feature `threads` parte das configurações padrão
default = ["threads"]

[profile.release]
# Otimização adicional para binários menores
lto = true